fix: исправить тесты UserServiceImplTest
- Исправлена инициализация зависимостей в тестах
- UserValidator теперь правильно инициализируется с моком UserStorage
- Тесты на cоздание, дублирование, обновление email и логина работают корректно